; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/arm/display/komeda/extr_komeda_pipeline.c_komeda_component_pickup_input.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/arm/display/komeda/extr_komeda_pipeline.c_komeda_component_pickup_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.komeda_component = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.komeda_component* (%struct.komeda_component*, i32)* @komeda_component_pickup_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.komeda_component* @komeda_component_pickup_input(%struct.komeda_component* %0, i32 %1) #0 {
  %3 = alloca %struct.komeda_component*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.komeda_component* %0, %struct.komeda_component** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.komeda_component*, %struct.komeda_component** %3, align 8
  %7 = getelementptr inbounds %struct.komeda_component, %struct.komeda_component* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = and i32 %8, %9
  store i32 %10, i32* %5, align 4
  %11 = load %struct.komeda_component*, %struct.komeda_component** %3, align 8
  %12 = getelementptr inbounds %struct.komeda_component, %struct.komeda_component* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call %struct.komeda_component* @komeda_pipeline_get_first_component(i32 %13, i32 %14)
  ret %struct.komeda_component* %15
}

declare dso_local %struct.komeda_component* @komeda_pipeline_get_first_component(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
